Fix for WMS-7038: Height issue for rich text editor when height was set to 100%[on safari], in that case the footer was overlapping the main video content

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1947,7 +1947,6 @@ If the height and width are not specified the video takes the height of the post
       }
       img {
         position: relative;
-        max-height: 100%;
         max-width: 100%;
       }
     }
